fix(theme): increase popover z-index

--- a/src/framework/theme/components/popover/popover.component.scss
+++ b/src/framework/theme/components/popover/popover.component.scss
@@ -9,7 +9,7 @@
   $arrow-offset: -($arrow-size * 2);
 
   position: absolute;
-  z-index: 1000;
+  z-index: 10000;
   border-radius: 5px;
   top: 200px;
 
